added date and time and filename

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <title>Security Camera</title>
 </head>
 <body>
+    <div class="time-info">
+        <h1 class="date-string">Local Time</h1>
+        <h3 class="file-string">Filename</h3>
+    </div>
     <div class="container-image">
         <img src="#" alt="" class="fullim">
         <video autoplay controls class="video">
